--- a/style.css
+++ b/style.css
@@ -1,15 +1,56 @@
+@font-face {
+    font-family: custom-font;
+    src: 
+}
+
+header {
+    background-color: rgb(146, 180, 236);
+    color: rgb(255, 210, 76);
+    width: 100%;
+    display: flex;
+    align-items: center;
+    width: 100%;
+}
+
+body {
+    
+    background-color: rgb(146, 180, 236);
+    color: rgb(255 255 255);
+    font-weight: 1000;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
+
+
 .cell {
     width: 38px;
     height: 38px;
-    background: white;
+    background: rgb(240, 240, 240);
     border: 1px solid black;
 }
 
 .containerCell {
     width: 640px;
     height: 640px;
-    background: white;
+    background: rgb(255, 255, 255);
     border: 1px solid black;
     display: flex;
     flex-wrap: wrap;
 }
+
+.containerButtons {
+    width: 160px;
+    height: 640px;
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+}
+
+.containerGeneral {
+    display: flex;
+    
+}
+
