--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ button {
     align-items: center;
     justify-content: center;
     font-family: 'Concert One', cursive;
+    box-shadow: 1px 1px 15px black;
+    
 }
 
 body {
@@ -68,5 +70,12 @@ body {
     background-color: rgb(255, 230, 154);
     display: flex;
     border-radius: 50px;
+    box-shadow: 1px 1px 15px black;
+}
 
+.link {
+    color:white;
+    text-decoration: none;
+    font-size: xx-large;
+    margin-left: 10px;
 }
