shadows were deleted, the font was changed, the hover for buttons was added

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Concert+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 
 header {
     background-color: rgb(146, 180, 236);
@@ -21,13 +21,16 @@ button {
     border-radius: 40px;
     align-items: center;
     justify-content: center;
-    font-family: 'Concert One', cursive;
-    box-shadow: 1px 1px 15px black;
-    
+    font-family: 'Luckiest Guy', cursive;
 }
 
+button:hover {
+    background-color: rgb(255, 210, 76);
+    transform: scale(1.1) perspective(1px)
+  }
+
 body {
-    font-family: 'Concert One', cursive;
+    font-family: 'Luckiest Guy', cursive;
     background-color: rgb(146, 180, 236);
     color: rgb(255 255 255);
     font-weight: 1000;
@@ -57,7 +60,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
 }
 
 .containerGeneral {
@@ -70,7 +72,6 @@ body {
     background-color: rgb(255, 230, 154);
     display: flex;
     border-radius: 50px;
-    box-shadow: 1px 1px 15px black;
 }
 
 .link {
