everything is working in this commit

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ button {
     align-items: center;
     justify-content: center;
     font-family: 'Luckiest Guy', cursive;
+    transition: 0.5s;
 }
 
 button:hover {
